--- a/Paginas/style.css
+++ b/Paginas/style.css
@@ -325,171 +325,238 @@ h3.subtitulo {
     margin-left: 25px;
 }
 
-@media(max-width:420px){
-    p.caja{
-        width: 400px;
+@media(max-width:1440px){
+    p.caja.textoResponsive{
+        width: auto;
         height: auto;
         text-align: center;
-    }
-    p.caja.mujertexto{
-        width: 300px;
-        height: auto;
-        text-align: center;
-        margin-left: 15%;
-    }
+        margin-left: 15px;
+        margin-right: auto;
+}   
     .contenedorFlexTexto{
-        display: flex;
-        flex-wrap: wrap;
+        justify-content: center;
     }
-    img.imagenMedianaEstaticaB{
-        width: 150px;
-    }
-    img.imagenMedianaB.imagenMediana{
-        width: 150px;
-    }
-    img.imagenGrande{
-        width: 300px;
-        height: 200px;
-        margin-left: 15%;
-    }
-    .videoPerso{
-        width: 350px;
-        height: 200px;
-        margin-left: 10%;
     }
     h3.subtituloIzq{
-        text-align: center;
-    }
-    .contenedor3img{
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-    }
-    img.imagenMedianaRedondeada.imagenMediana{
-        margin-left: 26%;
-    }
-    form.ayuda{
+        max-width: 600px;
         margin-left: auto;
         margin-right: auto;
-    }
-    img.imagenGrandeEstatica.aos-init.aos-animate{
-        width: 350px;
-        height: 300px;
-        margin-left: 7.5%;
-    }
-    div.botonCentro{
-        display: flex;
-        justify-content: center;
-    }
-    button.botonComprar{
-        text-align: center;
-    }
-    .contenedor .botonComprar{
-        margin: 0px;
-    }
-    .contenedorFlexTexto p.caja{
-        margin-left: auto;
-    }
-    section.ContenedorBorde{
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 10px;
-        display: flex;
-        flex-direction: column;
-        height: 500px;
-        object-fit: cover;
-        max-width: 300px;
-    }
-    .textoResponsive{
-        font-size: 10px;
-        max-width: 100%;
-    }
-}
-@media(max-width:768px){
-    p.caja{
-        width: 700px;
-        height: auto;
-        text-align: center;
-        margin-left: auto;
-        margin-right: auto;
-}
-    img.imagenGrande{
-        width: 500px;
-        height: 350px;
-        margin-left: 15%;
-}
-    .contenedor3img{
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        justify-content: center;
-}
-    h3.subtituloIzq{
-        text-align: center;
-}
-    .videoPerso{
-        display: flex;
-        justify-content: center;
-        margin-right: auto;
-        margin-left: auto;
-        width: 550px;
-        height: 250px;
-        margin-bottom: 5px;
-}
-    img.imagenGrandeEstatica.aos-init.aos-animate{
-        width: 230px;
-        height: 230px;
-        margin-left: auto;
-        margin-right: auto;
-}
-    img.imagenMediana.imagenMedianaRedondeada.agrandar{
-        height: 230px;
-        width: 230px;
-        margin-right: auto;
-        margin-left: auto;
-    }
-    p.caja.mujertexto{
-        width: 700px;
-        height: auto;
-        text-align: center;
-        margin-left: auto;
-    }
-    .contenedor3img{
-        display: flex;
-        flex-wrap: wrap;
-    }
-    section.ContenedorBorde{
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 10px;
-        display: flex;
-        flex-direction: column;
-        height: 500px;
-        object-fit: cover;
-        max-width: 300px;
-    }
-    div.botonCentro{
-        display: flex;
-        justify-content: center;
-        
-    }
-    .contenedorFlexTexto{
-        display: flex;
-        flex-wrap: wrap;
     }
     img.imagenMedianaEstatica.sombra{
-        margin-left: 33%;
-        margin-bottom: 5px;
+        margin-left: 40%;
+        margin-bottom: 15px;
     }
     form.ayuda{
         margin-left: auto;
         margin-right: auto;
     }
     .textoResponsive{
-        font-size: 12px;
+        font-size: 20px;
         max-width: 100%;
     }
     .contenedor .botonComprar{
         margin: 0px;
     }
+    div.botonCentro{
+        display: flex;
+        justify-content: center;       
+    }
+    .videoPerso{
+        display: flex;
+        justify-content: center;
+        margin-right: auto;
+        margin-left: auto;
+        width: 750px;
+        height: 350px;
+        margin-bottom: 5px;
 }
+    div.contenedor3img{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    section.ContenedorBorde{
+        margin-top: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        display: flex;
+        height: 500px;
+        width: 800px;
+        object-fit: cover;
+    }
+@media(max-width:768px){
+        p.caja{
+            width: auto;
+            height: auto;
+            text-align: center;
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 100%;
+    }
+        img.imagenGrande{
+            width: 500px;
+            height: 350px;
+            margin-left: 15%;
+    }
+        .contenedor3img{
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: row;
+            justify-content: center;
+    }
+        h3.subtituloIzq{
+            text-align: center;
+    }
+        .videoPerso{
+            display: flex;
+            justify-content: center;
+            margin-right: auto;
+            margin-left: auto;
+            width: 550px;
+            height: 250px;
+            margin-bottom: 5px;
+    }
+        img.imagenGrandeEstatica.aos-init.aos-animate{
+            width: 230px;
+            height: 230px;
+            margin-left: auto;
+            margin-right: auto;
+    }
+        img.imagenMediana.imagenMedianaRedondeada.agrandar{
+            height: 230px;
+            width: 230px;
+            margin-right: auto;
+            margin-left: auto;
+        }
+        p.caja.mujertexto{
+            width: 700px;
+            height: auto;
+            text-align: center;
+            margin-left: auto;
+        }
+        .contenedor3img{
+            display: flex;
+            flex-wrap: wrap;
+        }
+        section.ContenedorBorde{
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 10px;
+            display: flex;
+            flex-direction: column;
+            height: 500px;
+            object-fit: cover;
+            max-width: 300px;
+        }
+        div.botonCentro{
+            display: flex;
+            justify-content: center;
+            
+        }
+        .contenedorFlexTexto{
+            display: flex;
+            flex-wrap: wrap;
+        }
+        img.imagenMedianaEstatica.sombra{
+            margin-left: 10%;
+            margin-bottom: 5px;
+        }
+        form.ayuda{
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .textoResponsive{
+            font-size: 16px;
+            max-width: 100%;
+        }
+        .contenedor .botonComprar{
+            margin: 0px;
+        }
+        img.imagenMedianaEstaticaB{
+            width: 200px;
+        }
+        img.imagenMedianaB.imagenMediana{
+            width: 200px;
+        }
+    }
+
+    @media(max-width:420px){
+        p.caja{
+            width: 400px;
+            height: auto;
+            text-align: center;
+        }
+        p.caja.mujertexto{
+            width: 300px;
+            height: auto;
+            text-align: center;
+            margin-left: 15%;
+        }
+        .contenedorFlexTexto{
+            display: flex;
+            flex-wrap: wrap;
+        }
+        img.imagenMedianaEstaticaB{
+            width: 150px;
+        }
+        img.imagenMedianaB.imagenMediana{
+            width: 150px;
+        }
+        img.imagenGrande{
+            width: 300px;
+            height: 200px;
+            margin-left: 15%;
+        }
+        .videoPerso{
+            width: 350px;
+            height: 200px;
+            margin-left: 10%;
+        }
+        h3.subtituloIzq{
+            text-align: center;
+        }
+        .contenedor3img{
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+        }
+        img.imagenMedianaRedondeada.imagenMediana{
+            margin-left: 26%;
+        }
+        form.ayuda{
+            margin-left: auto;
+            margin-right: auto;
+        }
+        img.imagenGrandeEstatica.aos-init.aos-animate{
+            width: 350px;
+            height: 300px;
+            margin-left: 7.5%;
+        }
+        div.botonCentro{
+            display: flex;
+            justify-content: center;
+        }
+        button.botonComprar{
+            text-align: center;
+        }
+        .contenedor .botonComprar{
+            margin: 0px;
+        }
+        .contenedorFlexTexto p.caja{
+            margin-left: auto;
+        }
+        section.ContenedorBorde{
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 10px;
+            display: flex;
+            flex-direction: column;
+            height: 500px;
+            object-fit: cover;
+            max-width: 300px;
+        }
+        .textoResponsive{
+            font-size: 10px;
+            max-width: 100%;
+        }
+    }
